--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -159,5 +159,7 @@
 	"submit_comment": "Отправить комментарий",
 	"no_comment": "Пока нет комментариев!",
 	"rating_": "Оцените объявление",
-	"rating_test": "Ваше мнение важно для нас"
+	"rating_test": "Ваше мнение важно для нас",
+	"loading": "Загрузка...",
+	"see_more": "Подробнее"
 }
